# react-fastapi-crud-app

./: README.md  Taskfile.yml  compose.services.yml
fastapi-app/: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
fastapi-app/app/: crud.py  database.py  main.py  models.py  schemas.py
react-app/: .prettierrc  Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
react-app/src/: App.tsx  main.tsx
react-app/src/components/AuthWrapper/: index.tsx
react-app/src/components/CrudDataTable/: index.tsx
react-app/src/hooks/: useDebounce.ts  useFetch.ts
react-app/src/store/: hooks.ts  index.ts  userSlice.ts
react-app/src/utils/: animations.ts  apiHelpers.ts  commonUtils.ts  domHelpers.ts  stateHelpers.ts  themeUtils.ts
